crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__glue__I044-implicit-inline-glue-c.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/glue/I044-implicit-inline-glue-c
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "A\n" [Continue]
> "C\n" [Done]
outcome: Done
