crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__glue__glue-with-divert.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/glue/glue-with-divert
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "We hurried home to Savile Row as fast as we could.\n" [Ended]
outcome: Ended
