crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__glue__implicit-inline-glue.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/glue/implicit-inline-glue
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "I have five eggs.\n" [Done]
outcome: Done
