crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__glue__left-right-glue-matching.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/glue/left-right-glue-matching
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "A line.\n" [Continue]
> "Another line.\n" [Done]
outcome: Done
