crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__glue__simple-glue.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/glue/simple-glue
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Some content with glue.\n" [Done]
outcome: Done
